# 3d_sparse_mapping

./: .gitignore  .gitmodules  README.md  start_camera_calibration.sh  start_dataset_slam.sh  start_real_time_slam.sh
scripts/common/: euroc_sequences.sh  kitti_sequences.sh  metrics_evaluator.py  tum_sequences.sh
scripts/common/camera/scripts/: convert_npz_to_yaml.py
scripts/euroc/: convert_euroc_to_ros2_bag.py  download_euroc_sequences.sh  evaluate_euroc_metrics.sh  generate_euroc_metrics.py  generate_times.py
scripts/evaluation/: create_results_dirs.sh  evaluate.sh  generate_euroc_times.sh  generate_tum_associates.sh
scripts/kitti/: download_kitti_sequences.sh  evaluate_kitti_metrics.sh  generate_kitti_metrics.py
scripts/setup/: install_dependencies.sh  setup.sh
scripts/tum/: convert_tum_to_ros2_bag.py  download_tum_sequences.sh  evaluate_tum_metrics.sh  generate_associate.py  generate_tum_metrics.py
src/monocular_depth_estimator/: CMakeLists.txt  package.xml
src/monocular_depth_estimator/launch/: midas_depth.launch.py
src/monocular_depth_estimator/src/: depth_estimator_node.cpp  midas_depth_node.py
src/ros2_orbslam3_wrapper/: CMakeLists.txt  package.xml
src/ros2_orbslam3_wrapper/src/: camera_node.cpp.old  camera_publisher_node.cpp  octomap_node.cpp  orbslam3_node.cpp  orbslam3_ros2_node.cpp  rviz_launcher_node.cpp  trajectory_publisher_node.cpp
src/ros2_orbslam3_wrapper/src/octomap_nodes/: dense_mapping.cpp  dense_mapping.cpp.save  original_octomap.cpp  sparse_mapping.cpp  working_somewhat_dense_mapping.cpp.cpp
src/ros2_orbslam3_wrapper/src/orbslam_nodes/: monocular_node.cpp  rgbd_node.cpp
